Mon Jun 18 09:29:25 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/InstanceHandleManager_T.cpp:
          Fixed incorrect class name in logging

Fri Jun 15 19:30:43 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/examples/Shapes/Receiver/Shapes_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/MultiTopic/Receiver/MultiTopic_Receiver_exec.cpp:
          Fixed compile warnings

Fri Jun 15 18:58:24 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/install_ciao_headers.mpc:
          Removed extension directories

Fri Jun 15 10:38:39 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Deployment/Handlers/Container_Handler.cpp:
          Zapped some code for extension container

Fri Jun 15 09:14:56 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Deployment/Handlers/CIAO_Deployment_Handlers.mpc:
        * MPC/config/ccm_extension_stub.mpb:
        * MPC/config/ciao_extension_container.mpb:
        * MPC/config/ciao_extension_container_stub.mpb:
        * ccm/Extension:
        * ccm/Extension/CCM_ClientContainerInterceptor.idl:
        * ccm/Extension/CCM_ClientContainerInterceptorRegistration.idl:
        * ccm/Extension/CCM_ContainerClientRequestInfo.idl:
        * ccm/Extension/CCM_ContainerInterceptor.idl:
        * ccm/Extension/CCM_ContainerRequestInfo.idl:
        * ccm/Extension/CCM_ContainerServantRequestInfo.idl:
        * ccm/Extension/CCM_ContainerServerRequestInfo.idl:
        * ccm/Extension/CCM_ContainerStubRequestInfo.idl:
        * ccm/Extension/CCM_ExtensionComponent.idl:
        * ccm/Extension/CCM_ExtensionContext.idl:
        * ccm/Extension/CCM_InvalidRegistration.idl:
        * ccm/Extension/CCM_QoS.idl:
        * ccm/Extension/CCM_ServantContainerInterceptor.idl:
        * ccm/Extension/CCM_ServantContainerInterceptorRegistration.idl:
        * ccm/Extension/CCM_ServerContainerInterceptor.idl: