@@ -1,3 +1,10 @@
+Mon Jun 18 15:39:18 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
+          Moved setting of OpenDDS transport config, need to be tweaked more,
+          OpenDDS doesn't support sharing rtps transports between domain
+          participants
+
 Mon Jun 18 09:29:25 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * connectors/dds4ccm/impl/InstanceHandleManager_T.cpp:
